<?xml version="1.0"?>
<package format="2">
    <name>victor_hardware_interface_msgs</name>
    <version>1.0.0</version>
    <description>The victor_hardware_interface_msgs package</description>

    <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>diagnostic_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

    <build_depend>message_generation</build_depend>

</package>
