<?xml version="1.0"?>
<package format="3">
    <name>victor_hardware_interfaces</name>
    <version>1.0.0</version>
    <description>Message and service definitions for victor.</description>

    <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>

    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
